# DFSLineupOptimizer

./: .gitignore  DK_full_roster_example.csv  FANDUEL_FULL_ROSTER_export.csv  FanDuel_full_roster_example.csv  FanDuel_mvp_example.csv  LICENSE  README.md  Yahoo_full_roster_example.csv  generate.py  optimize.py  pyproject.toml
.circleci/: config.yaml  config.yml
.github/workflows/: python-app.yml
lineup_optimizer/: Lineup.py  LineupBuilder.py  LineupBuilderSlot.py  LineupTagRules.py  TagsController.py  __init__.py  lineup.py  lineup_builder.py  lineup_builder_slot.py  lineup_config.py  lineup_tag_rules.py  multi_lineup_builder.py  tags_controller.py
lineup_optimizer/exporter/: __init__.py  exporter.py
lineup_optimizer/parsers/: __init__.py  draftkings_parser.py  fanduel_parser.py  yahoo_parser.py
lineup_optimizer/settings/: __init__.py  default_settings.py  draftkings_settings.py  fanduel_settings.py  yahoo_settings.py
lineup_optimizer/site_configs/: __init__.py  draftkings.py  fanduel.py  yahoo.py
parsers/: DraftKingsParser.py  FanduelParser.py  YahooParser.py  __init__.py
test/: ParserTests.py  draftkings_draftables.py  fanduel_draftables.py  test_draftables.py  test_draftkings_lineup_builder.py  test_fanduel_lineup_builder.py  test_lineup.py  test_lineup_builder.py  test_lineup_builder_slot.py  test_multi_lineup_builder.py  test_parsers.py  test_tags_controller.py
test/test_csvs/: DK_full_roster.csv  Yahoo_full_roster.csv  (+3 more)
tests/: LineupBuilderSlotTests.py  LineupBuilderTests.py  LineupTests.py  TagsControllerTests.py  test_draftables.py
(+1 files in other folders)
