[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "lineup_optimizer"
version = "0.0.1"
authors = [
  { name="Nolan Roth" },
]
description = "A Python package for optimizing and generating DFS lineups."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/n-roth12/DFSLineupOptimizer"